--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_charts: ^0.4.0
   shared_preferences: ^2.0.17
   smooth_page_indicator: ^1.0.0+2
+  carousel_slider: ^4.2.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
